2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>

	* src/epiphany.defs:
	* src/epiphany.override:

	- Change EphyEmbedEvent.get_property to .get_event_property
	- Wrap EphyPermissionManager.list(), and the boxed
	  type it uses.
	- Wrap EphyEmbed.get_security_level()

2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>

	* src/window-commands.c (window_cmd_help_about): 

	Put blank lines between the paragraphs in the
	licence dialog.

2006-01-22  Jean-François Rameau  <jframeau@cvs.gnome.org>
	
	* src/ephy-dbus.c: (ephy_dbus_shutdown):

	Remove both session/system filters before finalizing EphyDbus object.
	Fix #327845.

2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-action.c
	* src/bookmarks/ephy-bookmark-properties.c
	
	Remove the user-icon functionality for now. Too many bugs.
	Note that support for the user-icon field still exists in
	the bookmarks database itself.

2006-01-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_help_about):

	Fix the previous commit.

2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>

	* src/bookmarks/ephy-bookmarks-editor.c (cmd_bookmarks_export) 

	Add back the gtk_widget_destroy() to really fix bug #327438

2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>

	* src/bookmarks/ephy-bookmarks-editor.c (cmd_bookmarks_export) 

	Fix bookmark exporting, so that it can be cancelled. 
	Fixes bug #327438

2006-01-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_help_about):

	Add licence to about dialogue. Patch by Brian Pepple,
	bug #327998.

2006-01-18  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (impl_get_embed_single):
	* embed/ephy-embed-single.c: (ephy_embed_single_init):
	* embed/ephy-embed-single.h:
	* embed/mozilla/mozilla-embed-single.cpp:

	Decouple embed single instantiation and initialisation.
	Prevents double-initialisation on startup.

	* embed/mozilla/EphyContentPolicy.cpp: