@@ -1,3 +1,11 @@
+2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* src/ephy-window.c
+	
+	Fixed the mouse cursor entry/exit code for the toolbar. I have
+	a suspicion that a bug may have been fixed in Gtk+ because this
+	solution was tried before. Bug #326817.
+
 2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* src/epiphany.defs:
